[Feat] #16 월별로 일정을 그루핑하는 로직 구현